// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Algolia Search component should render text field with user entered search text 1`] = `
<TextField
  onChange={[Function]}
  placeholder="Have a question?  Ask or enter a search term here."
  value="example search"
/>
`;

exports[`Algolia Search component should render with empty text field 1`] = `
<TextField
  onChange={[Function]}
  placeholder="Have a question?  Ask or enter a search term here."
  value=""
/>
`;
